# sar_nano_swarm

./: .gitattributes  .gitignore  .gitmodules  README.md  requirements.txt  setup_env.sh
.cursor/: AGENTS.md
.cursor/docs/: Phase1_Physical_Fidelity_and_Sensor_Implementation_Plan.md  Simulation_Training_Optimization_Roadmap_v2.md
cache/: 6CF51204.json  E9021A88.json
configs/airframe/: payload.yaml  pid_gains_loaded.yaml  pid_gains_stock.yaml  pid_tune.yaml  thrust_margin.yaml
configs/rviz/: radar.rviz
configs/sensors/: tof.yaml
eval_scripts/: _pid_tune_report.json  apply_payload.py  apply_tof_sensor.py  check_radar_topic.sh  hover_gate.py  phase0_gate.sh  pid_gains.py  push_pid_gains.py  quick_fly_test.py  thrust_margin_check.py  tof_gate.py  tune_pid.py
eval_scripts/debug/: debug_arm.py  debug_motors.py  debug_sensors.py  debug_toc.py  debug_toc2.py  debug_toc3.py
perception/radarays_gz2/: CMakeLists.txt  package.xml
perception/radarays_gz2/include/radarays_gz2/: RadarSensorSystem.hpp
perception/radarays_gz2/src/: RadarSensorSystem.cpp
sim_worlds/: phase0_tunnel_gate.sdf  phase1_pid_tune.sdf  test_radar.world
sim_worlds/patched_worlds/: cave_world.world  test_radar.world
