<?xml version="1.0"?>
<package format="3">
  <name>radarays_gz2</name>
  <version>0.0.1</version>
  <description>FMCW radar sensor plugin for gz-sim (Harmonic) using rmagine raycasting</description>
  <maintainer email="you@example.com">ethan</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
